# dna

./: .gitignore  README.md  bench.py  dataloader.py  dataset.py  inspect_data.py  job.sh  logs.py  main.py  main_wiki.py  model.py  pyproject.toml  run.sh  run_debug.sh  sample.py  test.py  test_dataset.py  test_dna.py  train.py  train_mini.sh  train_slurm.sh  utils.py
dna/: __init__.py  data.py  dataloader.py  dense.py  dna.py  eval.py  generate.py  model.py  models.py  modules.py  moe.py  nn.py  router.py  routing.py  sample.py  utils.py
logs/: __init__.py  core.py  utils.py
logs/plots/: attn_token_examples.py  capacity_dashboard.py  co_usage.py  color_grid.py  diversity.py  flow_arrows.py  full_path_analysis.py  histograms.py  modular.py  path_analysis.py  phase_portrait.py  routing_visuals.py  sankey.py  temp_sweep.py  transitions.py  utils.py
scripts/: main.py  metrics.py  train_mini.sh  utils.py
tests/: test_models.py
