[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dna"
version = "0.1.0"
description = "Distributed Neural Architectures (DNA) – JAX/Equinox"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alexander Tschantz" }]
dependencies = [
  "jax",
  "jaxlib",
  "equinox",
  "jaxtyping",
  "typeguard",
  "optax",
  "tyro",
  "wandb",
  "mediapy",
  "pytest",
  "datasets",
  "transformers",
  "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dna*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests", "."]
filterwarnings = [
  "ignore:.*PytestAssertRewriteWarning.*",
]
