[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dna"
version = "0.1.0"
description = "Distributed Neural Architectures (DNA)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alexander Tschantz" }]
dependencies = [
  "jax[cuda12]",
  "jaxlib",
  "equinox",
  "jaxtyping",
  "typeguard",
  "optax",
  "tyro",
  "wandb[mediapy]",
  "mediapy",
  "datasets",
  "transformers",
  "numpy",
  "plotly",
  "rich"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dna*"]
