[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dna"
version = "0.1.0"
description = "Distributed Neural Architectures (DNA)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alexander Tschantz" }]

dependencies = [
  "jax[cuda12]",
  "jaxlib",
  "equinox",
  "jaxtyping",
  "optax",
  "tyro",
  "wandb[mediapy]",
  "datasets",
  "transformers",
  "huggingface_hub[hf_xet]",
  "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dna*"]